# dotmgr

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  config.rs  main.rs  ui.rs  utils.rs
