[package]
name = "dotmgr"
version = "0.2.3"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["akirco <aki.me.morin@gmail.com>"]

[dependencies]
ratatui = { version = "0.30.0", features = ["macros"] }
crossterm = "0.29.0"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
sha2 = "0.11.0"

[profile.release]
opt-level = "z"
lto = true
strip = "symbols"
